tests/typechecker/should_pass/recursive_datatypes.csp
datatype Z = A.{0,1}.{0,1}
datatype Y = X.{A.0.1, A.1.0}

test1 = member(X.A.0.1, Y)
