tests/typechecker/should_fail/duplicated_definitions_datatype.csp
datatype A = B.{0..1}

datatype A = C.{0..1}
